--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,58 +7,37 @@
     android:layout_height="match_parent"
     android:background="@color/teal_700">
 
-    <LinearLayout
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/draw_lay"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.cardview.widget.CardView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="107dp"
-            app:cardBackgroundColor="#E49F9F"
-            app:cardCornerRadius="10dp">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView"
+            <include
+                layout="@layout/toolbar"
                 android:layout_width="wrap_content"
-                android:layout_height="73dp"
-                android:clickable="true"
-                android:drawableLeft="@drawable/ic_baseline_add_circle_outline_24"
-                android:textAllCaps="true"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                android:textSize="24sp"
-                android:typeface="normal"
-                tools:text="New event" />
+                android:layout_height="wrap_content" />
 
-        </androidx.cardview.widget.CardView>
+            <FrameLayout
+                android:id="@+id/event_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="107dp"
-            app:cardBackgroundColor="#7DCD81"
-            app:cardCornerRadius="10dp">
+        </LinearLayout>
 
-            <Button
-                android:id="@+id/butcar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Button" />
-        </androidx.cardview.widget.CardView>
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/drawer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:menu="@menu/drawer_view" />
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="107dp"
-            app:cardBackgroundColor="#8B60D6"
-            app:cardCornerRadius="10dp">
-
-            <Button
-                android:id="@+id/butcar2"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:foreground="@drawable/ic_baseline_add_circle_outline_24"
-                app:backgroundTint="@android:color/darker_gray" />
-        </androidx.cardview.widget.CardView>
+    </androidx.drawerlayout.widget.DrawerLayout>
 
 
-    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
