--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -7,82 +7,95 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="314dp"
+        android:id="@+id/wl"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginStart="12dp"
-        android:text="Welcome to My Bakery"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="12dp"
+        android:text="Welcome to serviceTech"
         android:textAlignment="center"
-        android:textColor="@android:color/holo_orange_dark"
+        android:textColor="@color/teal_700"
         android:textSize="25dp"
         android:textStyle="bold" />
 
     <ImageView
+        android:id="@+id/logo"
         android:layout_width="319dp"
         android:layout_height="105dp"
-        android:layout_marginTop="50dp"
+        android:layout_below="@id/wl"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="8dp"
         android:src="@drawable/ic_baseline_person_outline_24">
 
     </ImageView>
 
 
     <EditText
-        android:id="@+id/txt_email"
+        android:id="@+id/logins"
         android:layout_width="275dp"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/logo"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="172dp"
+        android:layout_marginTop="8dp"
         android:hint="Email" />
 
     <EditText
-        android:id="@+id/txt_pwd"
+        android:id="@+id/login_pwd"
         android:layout_width="275dp"
-        android:layout_height="61dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/logins"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="231dp"
+        android:layout_marginTop="8dp"
         android:hint="Password" />
 
     <Button
         android:id="@+id/btn_login"
         android:layout_width="281dp"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/login_pwd"
         android:layout_alignParentStart="true"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="8dp"
         android:background="@android:color/holo_orange_light"
         android:text="LOGIN" />
 
     <ProgressBar
         android:id="@+id/prg_bar"
-        android:visibility="invisible"
-        android:layout_width="75dp"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="12dp"
+        android:layout_below="@id/btn_login"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="120dp"
-        android:layout_marginTop="82dp" />
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="@dimen/dimen_20dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="@dimen/dimen_20dp"
+        android:visibility="invisible" />
 
     <TextView
+        android:id="@+id/dha"
         android:layout_width="262dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="390dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/prg_bar"
         android:layout_marginLeft="25dp"
+        android:layout_marginTop="8dp"
         android:text="Do not have an account?" />
 
     <Button
         android:id="@+id/btn_register"
         android:layout_width="283dp"
         android:layout_height="36dp"
+        android:layout_below="@id/dha"
         android:layout_alignParentStart="true"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="410dp"
+        android:layout_marginTop="0dp"
         android:background="@color/colorPrimary"
         android:text="Register" />
-
 
 
 </RelativeLayout>
