--- a/app/src/main/res/layout/fragment_appointment.xml
+++ b/app/src/main/res/layout/fragment_appointment.xml
@@ -26,7 +26,7 @@
 
         <ImageView
             android:id="@+id/itmAtt"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="@dimen/dimen_40dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
@@ -79,8 +79,8 @@
 
         <ImageView
             android:id="@+id/mitemImg"
-            android:layout_width="wrap_content"
-            android:layout_height="130dp"
+            android:layout_width="0dp"
+            android:layout_height="200dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
