--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -8,26 +8,90 @@
     >
 
     <TextView
-        android:id="@+id/status"
+        android:id="@+id/L_title"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_20dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:background="@color/profile_desc"
         android:text="event details"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        app:layout_constraintBottom_toTopOf="@+id/hCard"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/hCard"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/pItemDets"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/L_title">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/hh"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="5dp">
+
+            <TextView
+                android:id="@+id/status"
+                android:layout_width="243dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_toLeftOf="@+id/eStatus"
+                android:text="STATUS :"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/eStatus"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/eStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginBottom="5dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:text="status"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/status"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
         android:id="@+id/pItemDets"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/pDiagnosis"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/status">
+        app:layout_constraintTop_toBottomOf="@+id/hCard">
 
         <RelativeLayout
             android:id="@+id/card1"
@@ -40,35 +104,47 @@
                 android:id="@+id/pItem"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_20dp"
-                android:text="Item Name"
+                android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
+                android:layout_marginTop="@dimen/dimen_20dp"
                 android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp"
                 android:layout_toLeftOf="@+id/pImg"
-                android:layout_alignParentStart="true" />
+                android:text="Item Name"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/pService"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_20dp"
-                android:text="Service Type"
-                android:layout_marginBottom="5dp"
                 android:layout_below="@id/pItem"
-                android:layout_toLeftOf="@+id/pImg"                android:layout_alignParentStart="true" />
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
+                android:layout_toLeftOf="@+id/pImg"
+                android:text="Service Type"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/pLocation"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_20dp"
-                android:text="Location"
                 android:layout_below="@id/pService"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="15dp"
                 android:layout_toLeftOf="@+id/pImg"
-                android:layout_alignParentStart="true" />
+                android:text="Location"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textSize="16sp" />
 
             <ImageView
                 android:id="@+id/pImg"
-                android:layout_width="100dp"
-                android:layout_height="80dp"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true" />
@@ -79,8 +155,13 @@
         android:id="@+id/pDiagnosis"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/pItemDets"
-        >
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/custDeets"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pItemDets">
+
         <RelativeLayout
             android:id="@+id/card0"
             android:layout_width="match_parent"
@@ -96,18 +177,22 @@
                 android:text="Diagnosis"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
             <TextView
                 android:id="@+id/cNote"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/c0"
-                />
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textSize="16sp" />
+
             <TextView
                 android:id="@+id/tRec"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/cNote"
-                />
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textSize="16sp" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
@@ -116,8 +201,13 @@
         android:id="@+id/custDeets"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/pDiagnosis"
-        >
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/techDeets"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pDiagnosis">
+
         <RelativeLayout
             android:id="@+id/card2"
             android:layout_width="match_parent"
@@ -133,18 +223,22 @@
                 android:text="Requested By"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-                <TextView
-                    android:id="@+id/cName"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/dimen_20dp"
-                    android:layout_below="@id/c2"
-                    />
-                <TextView
-                    android:id="@+id/cTelNo"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/dimen_20dp"
-                    android:layout_below="@id/cName"
-                    />
+
+            <TextView
+                android:id="@+id/cName"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_20dp"
+                android:layout_below="@id/c2"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/cTelNo"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_20dp"
+                android:layout_below="@id/cName"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textSize="16sp" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
@@ -152,8 +246,13 @@
         android:id="@+id/techDeets"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/custDeets"
-        >
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/evDeets"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/custDeets">
+
         <RelativeLayout
             android:id="@+id/card3"
             android:layout_width="match_parent"
@@ -169,18 +268,20 @@
                 android:text="Picked By"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
             <TextView
                 android:id="@+id/tName"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_20dp"
                 android:layout_below="@id/c3"
-                />
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
             <TextView
                 android:id="@+id/tTelNo"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_20dp"
                 android:layout_below="@id/tName"
-                />
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
@@ -188,8 +289,13 @@
         android:id="@+id/evDeets"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/techDeets"
-        >
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/pTime"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/techDeets">
+
         <RelativeLayout
             android:id="@+id/card4"
             android:layout_width="match_parent"
@@ -202,27 +308,69 @@
                 android:layout_height="@dimen/dimen_20dp"
                 android:layout_alignParentTop="true"
                 android:background="#9AEC9D"
-                android:text="Attend at"
+                android:text="Scheduled For"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
             <TextView
                 android:id="@+id/sDate"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_20dp"
                 android:layout_below="@id/c4"
-                />
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
             <TextView
                 android:id="@+id/sTime"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_20dp"
                 android:layout_below="@id/sDate"
-                />
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        </RelativeLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/pTime"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/evDeets">
+
+        <RelativeLayout
+            android:id="@+id/card5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp">
+
+            <TextView
+                android:id="@+id/h5"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_20dp"
+                android:layout_alignParentTop="true"
+                android:background="#9FD16B"
+                android:text="Attended at:"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
+            <TextView
+                android:id="@+id/startTime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/h5"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textSize="16sp" />
+
             <TextView
                 android:id="@+id/eTime"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dimen_20dp"
-                android:layout_below="@id/sTime"
-                />
+                android:layout_height="wrap_content"
+                android:layout_below="@id/startTime"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textSize="16sp" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
